clustered-counter/counter-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: counter-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter
spec:
  hosts:
  - "*"
  gateways:
  - counter-gateway
  http:
  - match:
    - uri:
        exact: /counter
    route:
    - destination:
        host: eap-app   # might need to manually set this service host name
        port:
          number: 8080
